// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot tests — all 15 engines > AssetProfileEngine snapshot 1`] = `
{
  "liquidityProfile": 0.7,
  "macroResponsiveness": 0.5,
  "sensitivityProfile": 0.6,
  "volatilityProfile": 0.48,
}
`;

exports[`Snapshot tests — all 15 engines > GeometryClassifier snapshot 1`] = `
{
  "breakoutProb": 0.6224593312018546,
  "collapseProb": 0.2689414213699951,
  "curvature": 0,
  "geometryRegime": "STABLE_STRUCTURE",
  "imbalance": 0,
  "isStable": true,
  "microState": "up-stable",
  "rotation": 0.5,
  "rotationPressure": 0.5,
  "structurePressure": 1,
}
`;

exports[`Snapshot tests — all 15 engines > GlobalStressEngine snapshot 1`] = `"SAFE"`;

exports[`Snapshot tests — all 15 engines > LiquidityMapEngine snapshot 1`] = `
{
  "discountZone": [
    49900,
    50100,
  ],
  "premiumZone": [
    50100,
    50300,
  ],
  "structureBounds": [
    49900,
    50300,
  ],
  "zones": [],
}
`;

exports[`Snapshot tests — all 15 engines > MacroBiasEngine snapshot 1`] = `"LONG"`;

exports[`Snapshot tests — all 15 engines > MarketStructureContextEngine snapshot 1`] = `
{
  "breakoutDirection": null,
  "discountZone": [
    49900,
    50100,
  ],
  "externalSwings": [],
  "internalSwings": [],
  "premiumZone": [
    50100,
    50300,
  ],
  "rangeState": "CONTRACTION",
  "rh": 50300,
  "rl": 49900,
  "structureBounds": [
    49900,
    50300,
  ],
  "trend": "RANGE",
}
`;

exports[`Snapshot tests — all 15 engines > MicroStructureEngine snapshot 1`] = `
{
  "alignmentScore": 0.16666666666666666,
  "bosDetected": true,
  "cvdDivergence": false,
  "divergence": false,
  "htfAlignment": false,
  "retestZone": false,
  "sweep": false,
}
`;

exports[`Snapshot tests — all 15 engines > OrderflowEngine snapshot 1`] = `
{
  "absorption": false,
  "bidAskPressure": 0.09090909090909091,
  "cvd": 50,
  "delta": 50,
  "footprintImbalance": 0,
}
`;

exports[`Snapshot tests — all 15 engines > PredictionEngine snapshot 1`] = `
{
  "band50": [
    0.7019940059940062,
    0.8219940059940061,
  ],
  "band80": [
    0.6419940059940061,
    0.8819940059940061,
  ],
  "band95": [
    0.5819940059940061,
    0.9419940059940062,
  ],
  "decayed": 0.6605557635383114,
  "liquidityBias": 0.004995004995004995,
  "max": 0.8819940059940061,
  "min": 0.6419940059940061,
  "smoothed": 0.761994005994006,
  "strictLine": 0.6349950049950052,
  "timestamp": "<MASKED>",
  "volatilityAdjustment": 0.08639999999999999,
}
`;

exports[`Snapshot tests — all 15 engines > RegimePersistenceEngine snapshot 1`] = `"HIGH_PERSISTENCE"`;

exports[`Snapshot tests — all 15 engines > RiskManager snapshot 1`] = `
{
  "edd": 200,
  "ev": 225,
  "feeAwareNetProfit": 0.39999999999999997,
  "geometryStable": true,
  "globalStress": "SAFE",
  "hardReject": true,
  "microstructureComplete": true,
  "probability": 85,
  "rejectReasons": [
    "Fee-aware net profit 0.40% is below 3% threshold",
  ],
  "stopDistance": 200,
  "targetDistance": 300,
  "volatilityRegime": "NORMAL",
}
`;

exports[`Snapshot tests — all 15 engines > ScoringEngine snapshot 1`] = `
{
  "contributions": {
    "breakoutStrength": 20,
    "geometry": 84,
    "liquidity": 0,
    "macro": 70,
    "microstructure": 50,
    "orderflow": 54.50000000000001,
    "rangeCompression": 30,
    "retestQuality": 10,
    "session": 80,
    "volatility": 75,
    "volumeExpansion": 35,
  },
  "probability": 47.8,
}
`;

exports[`Snapshot tests — all 15 engines > SectorRotationEngine snapshot 1`] = `"BTC-DOMINANT"`;

exports[`Snapshot tests — all 15 engines > TimeSessionEngine snapshot 1`] = `"NEWYORK"`;

exports[`Snapshot tests — all 15 engines > VolatilityRegimeEngine snapshot 1`] = `"NORMAL"`;
